--- a/sitoCorsi/sceltaCorso/index.html
+++ b/sitoCorsi/sceltaCorso/index.html
@@ -49,6 +49,11 @@
             </div>
         </div>
         <div class="row">
+            <div class="col-4 g-3 align-items-center"><label for="programmazione">Programmazione:</label></div>
+            <div class="col-4 g-3 align-items-center"><label for="disegno">Disegno:</label></div>
+            <div class="col-4 g-3 align-items-center"><label for="cucina">Cucina:</label></div>
+        </div>
+        <div class="row">
             <div class="col-4 g-3 align-items-center">
                 <select class="form-select" id="programmazione">
                     <option selected>Argomenti programmazione</option>
@@ -71,7 +76,7 @@
                 <button type="button" class="btn btn-outline-light" id="crea">Crea Corso</button>
             </div>
         </div>
-        <div>
+        <div class="mt-4">
             <h3 id="corsoCreato"></h3>
         </div>
         
